Introduction/necloudtraining-dev-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  gateways:
    - necloudnativetraining-dev-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /customer
      route:
        - destination:
            host: customer-service
            port:
              number: 8080
